--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
+    "puppeteer": "^22.15.0",
     "sharp": "^0.33.4",
     "undici-types": "^6.11.1"
   },
