--- a/package.json
+++ b/package.json
@@ -13,19 +13,23 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.0.2",
+    "@types/selenium-webdriver": "^4.1.24",
     "cheerio": "^1.0.0-rc.10",
     "copy-webpack-plugin": "^12.0.2",
     "html-webpack-plugin": "^5.6.0",
     "node-fetch": "^3.3.2",
     "playwright": "^1.21.1",
     "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
+    "chrome-remote-interface": "^0.33.2",
     "puppeteer": "^22.15.0",
+    "selenium-webdriver": "^4.23.0",
     "sharp": "^0.33.4",
     "undici-types": "^6.11.1"
   },
