--- a/src/server/package.json
+++ b/src/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "server": "node ./dist/server.js"
   }
