--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "module": "commonjs",  // Используем CommonJS
+    "module": "CommonJS",
     "strict": true,
     "esModuleInterop": true,
     "outDir": "./dist",
