--- a/src/server/package.json
+++ b/src/server/package.json
@@ -4,7 +4,7 @@
   "type": "commonjs",
   "scripts": {
     "dev": "parcel src/server.ts",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js  --watch --progress --mode=development"
   },
   "devDependencies": {
     "path-browserify": "^1.0.1",
